<resources>
    <string name="app_name">QuizApp</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="submit">Submit</string>
    <string name="take_new_quiz">Take New Quiz</string>
    <string name="finish">Finish</string>
    <string name="_0">0%</string>
</resources>